# rusty_parquet_to_csv

./: Cargo.toml  README.md
src/: arg_parser.rs  errors.rs  main.rs  parquet_utils.rs
