[package]
name = "parquet_to_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[linker]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
indicatif = "0.17.8"
polars ={ version = "0.39.2", features = ["lazy", "parquet", "polars-io", "csv", "streaming"] }
rayon = "1.10.0"
walkdir = "2.5.0"
